Fix home styling so it won't look silly on mobile

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -4,11 +4,15 @@
   color: #fafafa;
   text-shadow: 3px 3px 10px #000000;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 3.5rem;
   font-family: "Montserrat", BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   align-self: center;
   justify-self: flex-end;
+
+  @media all and (max-width: 500px) {
+    margin: 0 0.4rem;
+  }
 }
 
 .homeContainer {
